# tg-gnn

./: .gitignore  README.md  pyproject.toml  requirements.txt  rmm_log.txt  schema_format.json  tg_data.py  tg_gcn.py  tg_renumber.py
benchmark/: Benchmark.md  Tg_data_load.md  data_load.md
benchmark-data-preprocessing/: add_nodeId.py  convert_npz_to_csv.py  convert_npz_to_csv_partitions.py  merge_features.sh
benchmark/standalone-benchmark/: gcn_cpu.py  gcn_dist_mnmg.py  gcn_mnmg.py  movielens_mnmg.py  renumber_kg.py  renumber_kg_cudf.py  rgcn_link_class_mnmg.py  taobao_mnmg.py
benchmark/utils/: README.md  add_nodeId.py  convert_npz_to_csv.py  merge_splits.sh  movielens_dataload.py  ogbn_dataload.py  pt_to_csv.py  taobao_dataload.py
examples/: rmm_log.txt  tg_gcn.py  tg_gcn_mnmg.py  tg_hetro_mnmg.py  tg_movielens_mnmg.py  tg_ogbn_mag_mnmg.py  tg_ogbn_paper_mnmg.py  tg_ogbn_products_mnmg.py  tg_taobao_mnmg.py
examples/movielens/: add_embedding.py  gen_embedding.py  load_movielens.gsql  movielens_schema.gsql  prepare_movielens.sh
examples/ogbn/: ogbn_schema.gsql  prepare_product.sh
examples/ogbn-mag/: load_map.gsql  mag_schema.gsql  prepare_mag.sh
examples/ogbn-product/: load_products.gsql  prepare_product.sh
setup/: conda_setup.sh  cuda_setup.sh  efs_setup.sh  python_setup.sh
src/: tg_gsql.py  tg_renumber.py  tg_shuffle.py  tg_utils.py
standalone-benchmark/: gcn_cpu.py  gcn_cpu_2.py  renumber_kg.py  renumber_kg_cudf.py
tests/: test_data.py  test_load_partitioned_data.py  test_tg_data.py  test_tg_gsql.py  test_tg_renumber.py  test_utils.py
tg_gnn/: data.py  tg_data.py  tg_gsql.py  tg_renumber.py  tg_shuffle.py  utils.py
tg_gnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
