[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tg-gnn"
version = "0.1.0"
description = "Tigergraph GNN project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "Zettabolt"}
]

keywords = ["graph", "gnn", "tigergraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Core runtime dependencies (pip-installable).
# Install the conda environment first via setup/conda_setup.sh, which provides
# the RAPIDS stack (cudf, cupy, rmm, cugraph, etc.) that cannot be pip-installed.
dependencies = [
    "pyTigerGraph",
    "numpy>=1.23,<2.3",
    "pandas",
    "torch>=2.5",
    "torch-geometric>=2.5",
    "scikit-learn",
    "ogb",
    "tqdm",
]

[project.optional-dependencies]
# RAPIDS GPU stack — installed via conda (setup/conda_setup.sh), listed here for
# documentation purposes. Do not pip-install these directly.
rapids = [
    "cudf-cu12",
    "cupy-cuda12x",
    "rmm-cu12",
    "cugraph-cu12",
    "cugraph-pyg",
    "pylibwholegraph",
]

# Extra packages used only in benchmark/ scripts.
benchmark = [
    "torchmetrics",
    "polars",
    "psutil",
]

# Extra packages used only in examples/movielens/ embedding scripts.
examples = [
    "langchain-community",
    "langchain-text-splitters",
    "langchain-openai",
    "sentence-transformers",
]

# Development / testing tools.
test = [
    "pytest>=6.2.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
