[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tg-gnn"
version = "0.2.0"
description = "Tigergraph GNN project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "TigerGraph"}
]

keywords = ["graph", "gnn", "tigergraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Core runtime dependencies (pip-installable).
# Install the conda environment first via setup/conda_setup.sh, which provides
# the RAPIDS stack (cudf, cupy, rmm, cugraph, etc.) that cannot be pip-installed.
dependencies = [
    "pyTigerGraph",
    "numpy>=1.23,<2.3",
    "pandas",
    "torch>=2.5",
    "torch-geometric>=2.5",
    "scikit-learn",
    "ogb",
    "tqdm",
    # benchmark
    "torchmetrics",
    "polars",
    "psutil",
    "pytest>=6.2.0",
    # examples
    "langchain-community",
    "langchain-text-splitters",
    "langchain-openai",
    "sentence-transformers",
]

# The RAPIDS GPU stack (cudf, cupy, rmm, cugraph, pylibwholegraph, etc.) is managed
# entirely by the setup scripts in setup/ and must not be declared here.

[project.optional-dependencies]
# Development / testing tools.
test = [
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
