[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tg-gnn"
version = "0.2.0"
description = "Tigergraph GNN project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "TigerGraph"}
]

keywords = ["graph", "gnn", "tigergraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Core runtime dependencies (pip-installable via PyPI).
# The RAPIDS GPU stack must be installed first via one of the setup scripts:
#   conda: setup/conda_setup.sh
#   pip:   setup/python_setup.sh
dependencies = [
    "pyTigerGraph",
    "numpy>=1.23,<2.3",
    "pandas",
    "torch>=2.5",
    "torch-geometric>=2.5",
    "scikit-learn",
    "ogb",
    "tqdm",
    # benchmark
    "torchmetrics",
    "polars",
    "psutil",
    # examples
    "langchain-community",
    "langchain-text-splitters",
    "langchain-openai",
    "sentence-transformers",
    # A transitive dependency in the RAPIDS stack imports pytest at runtime,
    # so it must be a core dep rather than test-only.
    "pytest>=6.2.0",
]

# The RAPIDS GPU stack (cudf, cupy, rmm, cugraph, pylibwholegraph, etc.) is managed
# entirely by the setup scripts in setup/ and must not be declared here.

[project.optional-dependencies]
# Development / testing tools.
test = [
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
